idf_component_register(SRCS 
                            "main.c"
                            "bh1750.c"
                            "pzem004t.c"
                            "connection"
                            "control.c"
                            "main.h"
                    INCLUDE_DIRS "."
                    )
